--- a/AC1_EvaluacionDeExpresiones/Ejercicio1.ipynb
+++ b/AC1_EvaluacionDeExpresiones/Ejercicio1.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Ejercicio 1\n",
-    "Ejercicio 1 de evaluacion de expresiones en Python jijijijijijaaaa me gusta el p\n",
+    "Ejercicio 1 de evaluacion de expresiones en Python\n",
     "\n",
     "$ \\frac {\\pi ^ 2}{6} = \\sum_{n=1}^{\\infty} \\frac{1}{n ^ 2} $"
    ]
