--- a/AC1_EvaluacionDeExpresiones/Ejercicio1.ipynb
+++ b/AC1_EvaluacionDeExpresiones/Ejercicio1.ipynb
@@ -275,12 +275,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Expresion 10"
+    "# Expresion 10\n",
+    "Primero resolvemos el contenido de los parentesis, elevamos el 4 al cuadrado y lo multiplicamos por el primer parentesis y al final hacemos la division entera, lo comparamos con el and not true, por lo tanto el resultado 40 al ser diferente de 0 da 1, not false es 1 por ende al final devuelve True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -294,6 +295,32 @@
    "source": [
     "expr10 = (2 + 3) * 4 ** 2 // (5 % 3) and not False\n",
     "print(expr10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Expresion 11\n",
+    "Se resuelven ambos parentesis, (65 & 66) > 70 y (65 ^ 66) == 0, dan 64 y 3, por ende ambas son falsas, la segunda se niega y se vuelve true, al final ambas entran en el and y regresa un False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "expr11 =  ((65 & 66) > 70 ) and not (65 ^ 66) == 0 \n",
+    "print(expr11)"
    ]
   }
  ],
